@@ -125,6 +125,9 @@
 	- fix: partial sets of hardlinked files permitted in payload.
 	- fix: mark rpmdb files with %config to prevent erasure on downgrade.
 	- work around a (possible) compiler problem on ia64.
+	- fix: rpm -qlv link count for directories dinna include '..'.
+	- fix: rpm -qlv size for directories should be zero.
+	- add --noghost to filter non-payload files from rpm -qlv output.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
